--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h2>Sample XML</h2>
+    <!--<h2>Sample XML</h2>
     <p id ="name"></p>
     <img src="" id ="picture">
     <script>
@@ -25,7 +25,7 @@
         document.getElementById("name").innerHTML = name;
         var img = document.getElementById("picture");
         img.src = picture;
-    </script>
-    <!--<script src="index.js"></script>-->
+    </script>-->
+    <script src="parserloader.js"></script>
 </body>
 </html>
